--- a/faq.html
+++ b/faq.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
         <title>The Boba Festival</title>
-        <link rel="stylesheet" href="css/normalize.css">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
@@ -36,7 +40,7 @@
                     <h2>Where have you been!? We thought you were an annual festival.</h2>
                     <h3>We truly apologize for the break that we took. It was a combination of having a small team and other priorities, so the Boba Festival kept getting pushed aside. But now, we’re back with a bigger team, more time, and newer resources. Even though we weren’t able to make time to plan the event, the Boba Festival was always in the back of our minds. Every time we drank boba, we were reminded of how we let down the boba-loving community. We won’t let you down again!</h3>
                     <h2>Where do the profits go?</h2>
-                    <h3>Half of the proceeds go to ...</h3>
+                    <h3>Half of the proceeds goes to Water 1st International that helps provide clean water for people all over the world. The other half of the proceeds goes towards a Scholarship for Future Business Professionals. It is our ambition that the Annual Boba Festival not only serves as a vessel to come together, but also an opportunity to give back to the community.</h3>
                     <h2>Can I sell my own tea/food/merchandise?</h2>
                     <h3>At this moment, no. As we grow in the future, we would love for our vendors to be able to sell their own wares.</h3>
                     <h2>If you have any further questions, do not hesistate to reach out to us through our <a href="contact.html">contact</a> page.</h2>
