--- a/gallery.html
+++ b/gallery.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
         <title>The Boba Festival</title>
-        <link rel="stylesheet" href="css/normalize.css">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+        
+        <link rel="stylesheet" href="css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
-        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <header>
@@ -29,15 +38,6 @@
         </header>  
         <div id="galleryWrapper">
             <section>
-                <div id="cp_widget_4b314193-6e28-4bc5-961d-154395485f07">...</div>
-                <script type="text/javascript">
-                    var cpo = []; cpo["_object"] ="cp_widget_4b314193-6e28-4bc5-961d-154395485f07"; cpo["_fid"] = "AYIAyBe81leE";
-                    var _cpmp = _cpmp || []; _cpmp.push(cpo);
-                    (function() { var cp = document.createElement("script"); cp.type = "text/javascript";
-                                 cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
-                                 var c = document.getElementsByTagName("script")[0];
-                                 c.parentNode.insertBefore(cp, c); })(); 
-                </script><noscript></noscript>
             </section>
         </div>
         <div id="footerWrapper">
