--- a/faq.html
+++ b/faq.html
@@ -59,10 +59,10 @@
                     <h8>- FOLLOW US -</h8>
                     <div id="socialMedia">
                             <ul id="socialSites">
-                                <li><a href="https://www.facebook.com/bobafestival" class="selected"><img src="pictures/fb2.png" alt="Facebook" style="width:30px;height:30px;"></a></li>
-                                <li><a href="https://www.instagram.com/bobafestival" class="selected"><img src="pictures/ig2.png" alt="Instagram" style="width:30px;height:30px;"></a></li>
-                                <li><a href="https://twitter.com/bobafestival" class="selected"><img src="pictures/tw2.png" alt="Twitter" style="width:30px;height:30px;"></a></li>
-                                <li><a href="https://www.flickr.com/photos/bobafestival" class="selected"><img src="pictures/flkr2.png" alt="Flickr" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://www.facebook.com/bobafestival" target="_blank" class="selected"><img src="pictures/fb2.png" alt="Facebook" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://www.instagram.com/bobafestival" target="_blank" class="selected"><img src="pictures/ig2.png" alt="Instagram" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://twitter.com/bobafestival" target="_blank" class="selected"><img src="pictures/tw2.png" alt="Twitter" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://www.flickr.com/photos/bobafestival" target="_blank" class="selected"><img src="pictures/flkr2.png" alt="Flickr" style="width:30px;height:30px;"></a></li>
                             </ul>
                         </div><br>
                     <h7>&copy; 2015 THE BOBA FESTIVAL</h7>
