--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <div id="contactWrapper">
                 <section>
                     <div id="leftSide">
-                        <div class="container">  
+                        <div class="container2">  
                             <form id="contact" action="index.php" method="post">
                                 <label for="name">NAME</label>
                                 <fieldset>
@@ -57,10 +57,10 @@
                         <h5>SOCIAL MEDIA</h5>
                         <div id="socialMedia">
                             <ul id="socialSites">
-                                <li><a href="https://www.facebook.com/bobafestival" class="selected"><img src="pictures/fb.png" alt="Facebook" style="width:40px;height:40px;"></a></li>
-                                <li><a href="https://www.instagram.com/bobafestival" class="selected"><img src="pictures/ig.png" alt="Instagram" style="width:40px;height:40px;"></a></li>
-                                <li><a href="https://twitter.com/bobafestival" class="selected"><img src="pictures/tw.png" alt="Twitter" style="width:40px;height:40px;"></a></li>
-                                <li><a href="https://www.flickr.com/photos/bobafestival" class="selected"><img src="pictures/flkr.png" alt="Flickr" style="width:40px;height:40px;"></a></li>
+                                <li><a href="https://www.facebook.com/bobafestival" target="_blank" class="selected"><img src="pictures/fb.png" alt="Facebook" style="width:40px;height:40px;"></a></li>
+                                <li><a href="https://www.instagram.com/bobafestival" target="_blank" class="selected"><img src="pictures/ig.png" alt="Instagram" style="width:40px;height:40px;"></a></li>
+                                <li><a href="https://twitter.com/bobafestival" target="_blank" class="selected"><img src="pictures/tw.png" alt="Twitter" style="width:40px;height:40px;"></a></li>
+                                <li><a href="https://www.flickr.com/photos/bobafestival" target="_blank" class="selected"><img src="pictures/flkr.png" alt="Flickr" style="width:40px;height:40px;"></a></li>
                             </ul>
                         </div>
                     </div>
@@ -79,10 +79,10 @@
                     <h8>- FOLLOW US -</h8>
                     <div id="socialMedia">
                             <ul id="socialSites">
-                                <li><a href="https://www.facebook.com/bobafestival" class="selected"><img src="pictures/fb2.png" alt="Facebook" style="width:30px;height:30px;"></a></li>
-                                <li><a href="https://www.instagram.com/bobafestival" class="selected"><img src="pictures/ig2.png" alt="Instagram" style="width:30px;height:30px;"></a></li>
-                                <li><a href="https://twitter.com/bobafestival" class="selected"><img src="pictures/tw2.png" alt="Twitter" style="width:30px;height:30px;"></a></li>
-                                <li><a href="https://www.flickr.com/photos/bobafestival" class="selected"><img src="pictures/flkr2.png" alt="Flickr" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://www.facebook.com/bobafestival" target="_blank" class="selected"><img src="pictures/fb2.png" alt="Facebook" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://www.instagram.com/bobafestival" target="_blank" class="selected"><img src="pictures/ig2.png" alt="Instagram" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://twitter.com/bobafestival" target="_blank" class="selected"><img src="pictures/tw2.png" alt="Twitter" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://www.flickr.com/photos/bobafestival" target="_blank" class="selected"><img src="pictures/flkr2.png" alt="Flickr" style="width:30px;height:30px;"></a></li>
                             </ul>
                         </div><br>
                     <h7>&copy; 2015 THE BOBA FESTIVAL</h7>
