--- a/gallery.html
+++ b/gallery.html
@@ -38,6 +38,48 @@
         </header>  
         <div id="galleryWrapper">
             <section>
+<!--
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img class="d-block w-100" src="pictures/gallery1.jpg" alt="First slide">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100" src="pictures/gallery2.jpg" alt="Second slide">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100" src="pictures/gallery3.jpg" alt="Third slide">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100" src="pictures/gallery4.jpg" alt="Fourth slide">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100" src="pictures/gallery5.jpg" alt="Fifth slide">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+-->
             </section>
         </div>
         <div id="footerWrapper">
@@ -52,10 +94,10 @@
                     <h8>- FOLLOW US -</h8>
                     <div id="socialMedia">
                             <ul id="socialSites">
-                                <li><a href="https://www.facebook.com/bobafestival" class="selected"><img src="pictures/fb2.png" alt="Facebook" style="width:30px;height:30px;"></a></li>
-                                <li><a href="https://www.instagram.com/bobafestival" class="selected"><img src="pictures/ig2.png" alt="Instagram" style="width:30px;height:30px;"></a></li>
-                                <li><a href="https://twitter.com/bobafestival" class="selected"><img src="pictures/tw2.png" alt="Twitter" style="width:30px;height:30px;"></a></li>
-                                <li><a href="https://www.flickr.com/photos/bobafestival" class="selected"><img src="pictures/flkr2.png" alt="Flickr" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://www.facebook.com/bobafestival" target="_blank" class="selected"><img src="pictures/fb2.png" alt="Facebook" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://www.instagram.com/bobafestival" target="_blank" class="selected"><img src="pictures/ig2.png" alt="Instagram" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://twitter.com/bobafestival" target="_blank" class="selected"><img src="pictures/tw2.png" alt="Twitter" style="width:30px;height:30px;"></a></li>
+                                <li><a href="https://www.flickr.com/photos/bobafestival" target="_blank" class="selected"><img src="pictures/flkr2.png" alt="Flickr" style="width:30px;height:30px;"></a></li>
                             </ul>
                         </div><br>
                     <h7>&copy; 2015 THE BOBA FESTIVAL</h7>
