Contact Form PHP

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                 <section>
                     <div id="leftSide">
                         <div class="container2">  
-                            <form id="contact" action="index.php" method="post">
+                            <form id="contact" action="mail.php" method="POST">
                                 <label for="name">NAME</label>
                                 <fieldset>
                                     <input name="name" placeholder="YOUR NAME" type="text" tabindex="1" required autofocus>
@@ -45,7 +45,7 @@
                                     <textarea name="message" placeholder="TYPE YOUR MESSAGE HERE..." tabindex="3" required></textarea>
                                 </fieldset>
                                 <fieldset>
-                                    <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">SUBMIT</button>
+                                    <button name="submit" type="submit" id="contact-submit" value ="Send" data-submit="...Sending">SUBMIT</button>
                                 </fieldset>
                             </form>
                         </div>
