--- a/vendors.html
+++ b/vendors.html
@@ -33,6 +33,12 @@
         <div id="footerWrapper">
             <footer>
                 <div id="footerLeft">
+                    <h8>- FESTIVAL INFORMATION -</h8><br>
+                    <h9>11:00 AM to 3:00 PM</h9><br>
+                    <h9>Saturday, October 13, 2018</h9><br>
+                    <h9>Santa Clara County Fairgrounds</h9>
+                </div>
+                <div id="footerMiddle">
                     <h8>- FOLLOW US -</h8>
                     <div id="socialMedia">
                         <ul id="socialSites">
@@ -42,12 +48,7 @@
                             <li><a href="https://www.flickr.com/photos/bobafestival" target="_blank" class="selected"><img src="pictures/flkr2.png" alt="Flickr" style="width:30px;height:30px;"></a></li>
                         </ul>
                     </div>
-                </div>
-                <div id="footerMiddle">
-                    <h8>- FESTIVAL INFORMATION -</h8><br>
-                    <h9>11:00 AM to 3:00 PM</h9><br>
-                    <h9>Saturday, October 13, 2018</h9><br>
-                    <h9>Santa Clara County Fairgrounds</h9>
+                    <h9>&copy; 2018 The Boba Festival</h9>
                 </div>
                 <div id="footerRight">
                     <h8>- GET IN TOUCH -</h8><br>
