--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
                             <li><a href="https://www.flickr.com/photos/bobafestival" target="_blank" class="selected"><img src="pictures/flkr2.png" alt="Flickr" style="width:30px;height:30px;"></a></li>
                         </ul>
                     </div>
-                    <h9>&copy; 2018 The Boba Festival</h9>
+                    <br><h9>&copy; 2018 The Boba Festival</h9>
                 </div>
                 <div id="footerRight">
                     <h8>- GET IN TOUCH -</h8><br>
