--- a/faq.html
+++ b/faq.html
@@ -51,7 +51,7 @@
             <footer>
                 <div id="footerLeft">
                     <h8>- FESTIVAL INFORMATION -</h8><br>
-                    <h9>11:00 AM to 3:00 PM</h9><br>
+                    <h9>12:00 PM to 4:00 PM</h9><br>
                     <h9>Saturday, October 13, 2018</h9><br>
                     <h9>Santa Clara County Fairgrounds</h9>
                 </div>
@@ -65,7 +65,7 @@
                             <li><a href="https://www.flickr.com/photos/bobafestival" target="_blank" class="selected"><img src="pictures/flkr2.png" alt="Flickr" style="width:30px;height:30px;"></a></li>
                         </ul>
                     </div>
-                    <h9>&copy; 2018 The Boba Festival</h9>
+                    <br><h9>&copy; 2018 The Boba Festival</h9>
                 </div>
                 <div id="footerRight">
                     <h8>- GET IN TOUCH -</h8><br>
