--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div id="countdown">
                     <p id="demo"></p>
                     <script>
-                        var countDownDate = new Date("Oct 13, 2018 11:00:00").getTime();
+                        var countDownDate = new Date("Oct 13, 2018 12:00:00").getTime();
                         var x = setInterval(function() 
                         {
                             var now = new Date().getTime();
@@ -58,7 +58,7 @@
             <footer>
                 <div id="footerLeft">
                     <h8>- FESTIVAL INFORMATION -</h8><br>
-                    <h9>11:00 AM to 3:00 PM</h9><br>
+                    <h9>12:00 PM to 4:00 PM</h9><br>
                     <h9>Saturday, October 13, 2018</h9><br>
                     <h9>Santa Clara County Fairgrounds</h9>
                 </div>
@@ -72,7 +72,7 @@
                             <li><a href="https://www.flickr.com/photos/bobafestival" target="_blank" class="selected"><img src="pictures/flkr2.png" alt="Flickr" style="width:30px;height:30px;"></a></li>
                         </ul>
                     </div>
-                    <h9>&copy; 2018 The Boba Festival</h9>
+                    <br><h9>&copy; 2018 The Boba Festival</h9>
                 </div>
                 <div id="footerRight">
                     <h8>- GET IN TOUCH -</h8><br>
