--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-sm navbar-light sticky-top" style="background-color: #7dc4c8; margin-bottom: 0; padding: 0;">
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top" style="background-color: #7dc4c8; margin-bottom: 0; padding: 0;">
         <div class="container" style="margin-left: 10px;">
             <a class="navbar-brand" href="index.html" style="color: white;">THE BOBA FESTIVAL</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
