Minor fix - footer color added in inline, added a little padding-top

--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
             </section>
         </div>
     </div>
-    <footer>
+    <footer style="background-color: #7dc4c8; padding-top: 15px;">
         <div class="row">
             <div class="col-lg-4 mb-5">
                 <h8>- FESTIVAL INFORMATION -</h8>
