--- a/faq.html
+++ b/faq.html
@@ -1,78 +1,131 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>The Boba Festival</title>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <ul>
-                    <li>
-                        <div id="homeButton">
-                            <a href="index.html">THE BOBA FESTIVAL</a>
-                        </div>
-                    </li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="vendors.html">VENDORS</a></li>
-                    <li><a href="volunteers.html">VOLUNTEERS</a></li>
-                    <li><a href="gallery.html">GALLERY</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                </ul>
-            </nav>
-            <img src="pictures/contact.jpg" style="width: 100%"> <!-- feature photo -->
-        </header>  
-        <div id="faqBackground">
-            <div id="faqWrapper">
-                <section>
-                    <h1>FREQUENTLY ASKED QUESTIONS</h1>
-                    <h2>What is the Boba Festival?</h2>
-                    <h3>The Boba Festival is a non-profit event where boba shops from all over come to showcase their signature drinks. Guests will be able to purchase a ticket for unlimited access to milk tea samples. This event was founded in 2015 by three boba enthusiasts to bring the boba community together under one roof. We hope to give value to what it means to win the best boba awards. </h3>
-                    <h2>Where have you been!? We thought you were an annual festival.</h2>
-                    <h3>We truly apologize for the break that we took. It was a combination of having a small team and other priorities, so the Boba Festival kept getting pushed aside. But now, we’re back with a bigger team, more time, and newer resources. Even though we weren’t able to make time to plan the event, the Boba Festival was always in the back of our minds. Every time we drank boba, we were reminded of how we let down the boba-loving community. We won’t let you down again!</h3>
-                    <h2>Where do the profits go?</h2>
-                    <h3>Half of the proceeds goes to Water 1st International that helps provide clean water for people all over the world. The other half of the proceeds goes towards a Scholarship for Future Business Professionals. It is our ambition that the Annual Boba Festival not only serves as a vessel to come together, but also an opportunity to give back to the community.</h3>
-                    <h2>Can I sell my own tea/food/merchandise?</h2>
-                    <h3>At this moment, no. As we grow in the future, we would love for our vendors to be able to sell their own wares.</h3>
-                    <h2>If you have any further questions, do not hesistate to reach out to us through our <a href="contact.html">contact</a> page.</h2>
-                </section>
-            </div>
-        </div>
-        <div id="footerWrapper">
-            <footer>
-                <div id="footerLeft">
-                    <h8>- FESTIVAL INFORMATION -</h8><br>
-                    <h9>12:00 PM to 4:00 PM</h9><br>
-                    <h9>Saturday, October 13, 2018</h9><br>
-                    <h9>Santa Clara County Fairgrounds</h9>
-                </div>
-                <div id="footerMiddle">
-                    <h8>- FOLLOW US -</h8>
-                    <div id="socialMedia">
-                        <ul id="socialSites">
-                            <li><a href="https://www.facebook.com/bobafestival" target="_blank" class="selected"><img src="pictures/fb2.png" alt="Facebook" style="width:30px;height:30px;"></a></li>
-                            <li><a href="https://www.instagram.com/bobafestival" target="_blank" class="selected"><img src="pictures/ig2.png" alt="Instagram" style="width:30px;height:30px;"></a></li>
-                            <li><a href="https://twitter.com/bobafestival" target="_blank" class="selected"><img src="pictures/tw2.png" alt="Twitter" style="width:30px;height:30px;"></a></li>
-                            <li><a href="https://www.flickr.com/photos/bobafestival" target="_blank" class="selected"><img src="pictures/flkr2.png" alt="Flickr" style="width:30px;height:30px;"></a></li>
-                        </ul>
+<head>
+    <title>The Boba Festival</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+        crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <div id="homeButton">
+                        <a href="index.html">THE BOBA FESTIVAL</a>
                     </div>
-                    <br><h9>&copy; 2018 The Boba Festival</h9>
-                </div>
-                <div id="footerRight">
-                    <h8>- GET IN TOUCH -</h8><br>
-                    <h9><a href="mailto:info@officialbobafest.com">info@officialbobafest.com</a></h9>
-                </div>
-                <br style="clear: left;" />
-            </footer>
+                </li>
+                <li>
+                    <a href="about.html">ABOUT</a>
+                </li>
+                <li>
+                    <a href="vendors.html">VENDORS</a>
+                </li>
+                <li>
+                    <a href="volunteers.html">VOLUNTEERS</a>
+                </li>
+                <li>
+                    <a href="gallery.html">GALLERY</a>
+                </li>
+                <li>
+                    <a href="faq.html">FAQ</a>
+                </li>
+                <li>
+                    <a href="contact.html">CONTACT</a>
+                </li>
+            </ul>
+        </nav>
+        <img src="pictures/contact.jpg" style="width: 100%">
+        <!-- feature photo -->
+    </header>
+    <div id="faqBackground">
+        <div id="faqWrapper">
+            <section>
+                <h1>FREQUENTLY ASKED QUESTIONS</h1>
+                <h2>What is the Boba Festival?</h2>
+                <h3>The Boba Festival is a non-profit event where boba shops from all over come to showcase their signature drinks.
+                    Guests will be able to purchase a ticket for unlimited access to milk tea samples. This event was founded
+                    in 2015 by three boba enthusiasts to bring the boba community together under one roof. We hope to give
+                    value to what it means to win the best boba awards. </h3>
+                <h2>Where have you been!? We thought you were an annual festival.</h2>
+                <h3>We truly apologize for the break that we took. It was a combination of having a small team and other priorities,
+                    so the Boba Festival kept getting pushed aside. But now, we’re back with a bigger team, more time, and
+                    newer resources. Even though we weren’t able to make time to plan the event, the Boba Festival was always
+                    in the back of our minds. Every time we drank boba, we were reminded of how we let down the boba-loving
+                    community. We won’t let you down again!</h3>
+                <h2>Where do the profits go?</h2>
+                <h3>Half of the proceeds goes to Water 1st International that helps provide clean water for people all over the
+                    world. The other half of the proceeds goes towards a Scholarship for Future Business Professionals. It
+                    is our ambition that the Annual Boba Festival not only serves as a vessel to come together, but also
+                    an opportunity to give back to the community.</h3>
+                <h2>Can I sell my own tea/food/merchandise?</h2>
+                <h3>At this moment, no. As we grow in the future, we would love for our vendors to be able to sell their own
+                    wares.
+                </h3>
+                <h2>If you have any further questions, do not hesistate to reach out to us through our
+                    <a href="contact.html">contact</a> page.</h2>
+            </section>
         </div>
-    </body>
+    </div>
+    <div id="footerWrapper">
+        <footer style="background-color: #7dc4c8; padding-top: 15px;">
+            <div id="footerLeft">
+                <h8>- FESTIVAL INFORMATION -</h8>
+                <br>
+                <h9>12:00 PM to 4:00 PM</h9>
+                <br>
+                <h9>Saturday, October 13, 2018</h9>
+                <br>
+                <h9>Santa Clara County Fairgrounds</h9>
+            </div>
+            <div id="footerMiddle">
+                <h8>- FOLLOW US -</h8>
+                <div id="socialMedia">
+                    <ul id="socialSites">
+                        <li>
+                            <a href="https://www.facebook.com/bobafestival" target="_blank" class="selected">
+                                <img src="pictures/fb2.png" alt="Facebook" style="width:30px;height:30px;">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/bobafestival" target="_blank" class="selected">
+                                <img src="pictures/ig2.png" alt="Instagram" style="width:30px;height:30px;">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/bobafestival" target="_blank" class="selected">
+                                <img src="pictures/tw2.png" alt="Twitter" style="width:30px;height:30px;">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.flickr.com/photos/bobafestival" target="_blank" class="selected">
+                                <img src="pictures/flkr2.png" alt="Flickr" style="width:30px;height:30px;">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <br>
+                <h9>&copy; 2018 The Boba Festival</h9>
+            </div>
+            <div id="footerRight">
+                <h8>- GET IN TOUCH -</h8>
+                <br>
+                <h9>
+                    <a href="mailto:info@officialbobafest.com">info@officialbobafest.com</a>
+                </h9>
+            </div>
+            <br style="clear: left;" />
+        </footer>
+    </div>
+</body>
+
 </html>
