--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <img src="pictures/Fanale.png">
         </section>
     </div>
-    <footer>
+    <footer style="background-color: #7dc4c8; padding-top: 15px;">
         <div class="row">
             <div class="col-lg-4 mb-5">
                 <h8>- FESTIVAL INFORMATION -</h8>
